# stream-vault

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  conftest.py  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
adr/: ADR-001-kafka-partitioning.md  ADR-002-delta-first-dual-write.md  ADR-003-scheduled-parity-validation.md
app/: __init__.py  canary.py  delta_client.py  drift.py  ingestion.py  main.py  materialization.py  metrics.py  model_registry.py  router.py  store.py  validation.py
scripts/: drift_detection.py  generate_synthetic_data.py  parity_check.py  promote_champion.py  train_baseline.py
tests/: test_delta_client.py  test_health.py  test_ingestion.py  test_integration.py  test_materialization.py  test_parity_check.py  test_store.py  test_validation.py
